Fixed: 1. Added pagination. 2. Renamed the methods buy and patchById. 3. Moved the convertCartToOrder logic to the service layer. 4. Added CartIsEmptyException. 5. Removed the "+3 days" logic. 6. Added a JPQL query for OrderRepository. 7. Changed the field type in OrderRequestDto to OrderStatus.